--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,17 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    background-color: #A9C9FF;
-    background-image: linear-gradient(180deg, #A9C9FF 0%, #FFBBEC 100%);
+    background-color: #8BC6EC;
+    background-image: linear-gradient(135deg, #8BC6EC 0%, #9599E2 100%);
+
   
   }
   
   .mainPage{
     flex-grow: 1;
+  }
+
+  .avatar{
+    height: 100px;
+    width: 100px;
   }
